--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60a1bd">  <td>18/03/04 17:39:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.TestApp()[pri:0, instance:selenium.seleniumKeyword.TestRunner@42a311]">TestApp</td> 
-  <td>main@12449253</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>18/03/04 17:40:00</td>   <td>23469</td> <td>&nbsp;</td><td title="&lt;&lt;TestRunner.TearDown()[pri:0, instance:selenium.seleniumKeyword.TestRunner@42a311]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12449253</td>   <td></td> </tr>
+<tr bgcolor="897b9a">  <td>18/05/06 20:23:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.TestApp()[pri:0, instance:selenium.seleniumKeyword.TestRunner@3c947bc5]">TestApp</td> 
+  <td>main@1765795529</td>   <td></td> </tr>
+<tr bgcolor="897b9a">  <td>18/05/06 20:23:51</td>   <td>15275</td> <td>&nbsp;</td><td title="&lt;&lt;TestRunner.TearDown()[pri:0, instance:selenium.seleniumKeyword.TestRunner@3c947bc5]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1765795529</td>   <td></td> </tr>
 </table>
